crates/macro-tools/tests/ui/builder/fail/struct_level_attribute.rs
use picea_macro_tools::Builder;

#[derive(Builder)]
#[builder(default)]
struct Meta {
    value: String,
}

fn main() {}
