crates/macro-tools/tests/ui/builder/fail/struct_level_attribute.stderr
error: builder attributes are only supported on fields
 --> tests/ui/builder/fail/struct_level_attribute.rs:4:1
  |
4 | #[builder(default)]
  | ^^^^^^^^^^^^^^^^^^^
